--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.26.1",
     "chart.js": "2.9.4",
     "react": "^17.0.2",
+    "react-calendar-datetime-picker": "^1.6.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.2.0",
