--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-calendar-datetime-picker": "^1.6.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-intersection-observer": "^8.33.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
